--- a/templates/app/article_create.html
+++ b/templates/app/article_create.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create article</title>
-</head>
-<body>
+{% extends "app/base.html" %}
+{% block content %}
     <h1>Create Article</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Save</button>
     </form>
-    
-</body>
-</html>
+{% endblock content %}
