--- a/templates/app/article_delete.html
+++ b/templates/app/article_delete.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete article</title>
-</head>
-<body>
+{% extends "app/base.html" %}
+{% block content %}    
     <h1>Delete Article</h1>
     <p>Are you sure you want to delete "{{ articles.title }}" ?</p>
     <form method="post">
         {% csrf_token %}
         <button type="submit">Delete</button>
     </form>
-    
-</body>
-</html>
+{% endblock content %}
