--- a/templates/app/article_update.html
+++ b/templates/app/article_update.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit article</title>
-</head>
-<body>
+{% extends "app/base.html" %}
+{% block content %}    
     <h1>Edit Article</h1>
+    <p>Last edited on {{ article.updated_at | date:"js F Y"  }}</p>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Save</button>
     </form>
-    
-</body>
-</html>
+{% endblock content %}
