--- a/templates/app/article_create.html
+++ b/templates/app/article_create.html
@@ -6,4 +6,6 @@
         {{ form.as_p }}
         <button type="submit">Save</button>
     </form>
+
+    <a href="{% url 'home' %}">Back to list</a>
 {% endblock content %}
