--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -1,9 +1,12 @@
 {% extends "app/base.html" %}
 {% block content %}
     <h1>Articles</h1>
+
+    <a href="{% url 'create_article' %}">Create an article</a>
+
     <ul>
     {% for article in articles %}
-        <li>{{ article.title }} with {{ article.word_count }} words.</li>
+        <li> <a href="{% url 'update_article' pk=article.id %}">{{ article.title }}</a> with {{ article.word_count }} words.</li>
     {% endfor %}
     </ul>
 {% endblock content %}
